--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div class="navbar">
         <div class="navegation-container">
-            <img class="logo-img" src="./public/images/smarttellerai-removebg-preview.png" rel="logo"/>
+          <div class="logo">
+            <a id="link" href="#home"><img class="logo-img" src="./public/images/smarttellerai-removebg-preview.png" rel="logo"/></a>
+            </div>
         <div class="nav-menu-2 w-nav-menu">
                
         <a class="news-link" href="#home">Home</a>
