changed some funcionalities and also changed the companies sections to a better layout

--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,10 @@
 <body>
     <div class="navbar">
         <div class="navegation-container">
-            <img class="logo-img" src="./public/images/smarttellerai-removebg-preview.png" rel="logo"/>
-        <div class="nav-menu-2 w-nav-menu">
+          <div class="logo">
+          <a id="link" href="./index.html"><img class="logo-img" src="./public/images/smarttellerai-removebg-preview.png" rel="logo"/></a>
+        </div>
+          <div class="nav-menu-2 w-nav-menu">
                
         <a class="news-link" href="./index.html">Home</a>
         <a class="news-link" href="./index.html">AI In Finance</a>
