added arrow to the navbar on the contact page

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     
 </head>
 <body>
-    <div class="navbar">
+    <div class="navbar" id="navbar">
         <div class="navegation-container">
           <div class="logo">
           <a id="link" href="./index.html"><img class="logo-img" src="./public/images/smarttellerai-removebg-preview.png" rel="logo"/></a>
@@ -114,6 +114,7 @@
       <li><a href="#">Support</a></li>
       <li><a href="#">Privacy Policy</a></li>
     </ul>
+    <a href="#navbar"><img class="arrow" src="./public/images/up-arrow (1).png" style="max-width:100%"></a>
     <p class="footer-copy" style="color: white">© Smarteller. All Rights Reserved</p>
   </footer>
 
