added some user friendly functionalites to the video background

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="styles/style.css">
     
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -36,7 +36,7 @@
     </div>
       <div class="home reveal" id="home">
        
-        <video autoplay muted loop>
+        <video autoplay muted loop playsinline  poster="images/poster.jpg">
           <source src="https://drive.google.com/uc?export=download&id=1gYI2gz-q8ZPH4vJreLLhncP03o_qgjAt" type="video/mp4" />
         </video>
        <div class="home-content">
