fixed some responsiveness issue

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
        
         <video autoplay muted loop playsinline  poster="images/poster.jpg">
           <source src="https://drive.google.com/uc?export=download&id=1gYI2gz-q8ZPH4vJreLLhncP03o_qgjAt" type="video/mp4" />
+          <source src="https://drive.google.com/uc?export=download&id=1gYI2gz-q8ZPH4vJreLLhncP03o_qgjAt" type="video/webm" />
+          <source src="https://drive.google.com/uc?export=download&id=1gYI2gz-q8ZPH4vJreLLhncP03o_qgjAt" type="video/ogg" />
         </video>
        <div class="home-content">
       <h1>AI-Powered Credit Scoring to </h1>
