made some changes to the responsiviness of navbar

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,17 @@
         <a class="news-link" href="./index.html">Financial Services</a>
           <div class="navegation-right">
            <a href="./contact.html" class=" btn button_contact w-button">Contact Us</a>
-            
+           <div class="navbar-icons-social">
+            <img
+              src="./public/images/5282541_fb_social media_facebook_facebook logo_social network_icon.png"
+              alt="small image for facebook"
+            />
+            <img
+              src="./public/images/5282544_camera_instagram_social media_social network_instagram logo_icon.svg"
+              alt="small image for icon-instagram"
+            />
+            <img id="french-flag" src="https://smartteller.net/asset/flags/france.png" alt="french-flag"/>
+          </div>
           </div>
 
       </div>
